--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.21.7",
+    "axios": "^0.27.2",
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
